--- a/src/ra.yaml
+++ b/src/ra.yaml
@@ -1,4 +1,20 @@
-endpoints: 
-  - uno
-  - dos
-  - tres
+ID: 
+  name: null
+results:
+  interpretation: null
+  notes: null
+NAMS:
+  - NAM:
+      name: null
+      description: null
+substances:
+  - substance:
+      name: null
+      SMILES: null
+      CASRN: null
+endpoints:
+  - endpoint:
+      name: null
+      description: null
+error: null
+warning: null
