--- a/src/ra.yaml
+++ b/src/ra.yaml
@@ -1,7 +1,7 @@
 ID: 
-  name: null
+  name: prueba
 results:
-  interpretation: null
+  interpretation: 'una interpretacion'
   notes: null
 NAMS:
   - NAM:
