--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,5 @@ admin_name: Admin Name
 config_status: true
 homepage: homepage@domain.org
 provider: My Organization
-ras: C:\Users\mpastor\soft\NAMASTOX\ras
-root_repository: C:\Users\mpastor\soft\NAMASTOX
+ras: X:\soft\NAMASTOX\ras
+root_repository: X:\soft\NAMASTOX
