--- a/src/ra.yaml
+++ b/src/ra.yaml
@@ -1,12 +1,25 @@
-ID: 
-results:
-NAMS:
-species:
-substances:
-endpoints:
-regulatory_framework:
-administration_route:
-exposures:
-notes:
+ID:     
+regulatory_framework:         # regulatory framework [none|ECHA|REACH]
+administration_route:         # [oral|topic]
+substances:         # list of input substances {}
+#  - name : example
+#    SMILES : c1ccccc1
+#    CASRN : 123-456-78
+endpoints:          # list of toxicity endpoints {}
+#  - name : CMR
+#    description : None
+exposures:         # list of exposure determination {} 
+#  - substance : example
+#    AUC : 123
+#    units : nM
+#    link : exposure_study_for_examample.xlxs
+species:     # [none|human|rat]
+NAMS:         # list of NAMs {}
+results:      # list of results {}
+notes:        # list of notes {}
+# - text: example risk assessment 
+#   author: Manuel Pastor
+#   e-mail: manuel.pastor@upf.edu
+#   date: 3/1/2023
 error:
 warning:
