--- a/src/expert.yaml
+++ b/src/expert.yaml
@@ -1,6 +1,6 @@
 rules:
  # rule 1
- - - dict : endpoints                  
+ - - dict : endpoint                 
      name : CMR
    - action : add
    - dict : NAMS 
@@ -8,7 +8,7 @@ rules:
      description : AMES description
  
  # rule 2
- - - dict : endpoints
+ - - dict : endpoint
      name : CMR
    - action : add
    - dict : NAMS 
@@ -24,7 +24,7 @@ rules:
      name : logp
  
  # rule 4
- - - dict : endpoints
+ - - dict : endpoint
      name : CMR
    - action : add
    - dict : exposures 
