--- a/src/ipepe.yaml
+++ b/src/ipepe.yaml
@@ -1,10 +1,10 @@
 substances:
-   - name : aspirin
-     SMILES : c1ccccc1
-     CASRN : 123-234-690
-endpoints: 
-   - name : CMR
-     description : None
+   - name: aspirin
+     SMILES: c1ccccc1
+     CASRN: 123-234-690
+endpoint: 
+  name: CMR
+  description: None
 regulatory_framework:
   organism: ECHA
   context: REACH
