--- a/src/ra.yaml
+++ b/src/ra.yaml
@@ -5,9 +5,9 @@ substances:         # list of input substances {}
 #  - name : example
 #    SMILES : c1ccccc1
 #    CASRN : 123-456-78
-endpoints:          # list of toxicity endpoints {}
-#  - name : CMR
-#    description : None
+endpoint:          # toxicity endpoint {}
+#  name : CMR
+#  description : None
 exposures:         # list of exposure determination {} 
 #  - substance : example
 #    AUC : 123
