--- a/src/default/ra.yaml
+++ b/src/default/ra.yaml
@@ -1,36 +1,19 @@
-ID:     
-workflow: workflow_default.csv
-step: 0 
-active_nodes: # []
-# - node_ID:
-## GENERAL RA INFO
-endpoint:          # toxicity endpoint {}
-#  name : CMR
-#  description : None
-substances:         # list of input substances {}
-#  - name : example
-#    SMILES : c1ccccc1
-#    CASRN : 123-456-78
-administration_route:         # [oral|topic]
-species:     # [none|human|rat]
-regulatory_framework:         # regulatory framework [none|ECHA|REACH]
-## TASK RESULTS (linked to a workflow node)
-results:         # list of exposure determination {} 
-#  - node_ID:
-#    cathegory: [NAM|exposure|expert|decision]
-#    substance : example
-#    summary: 
-#    value: 
-#    unit:
-#    uncertainty:
-#    link : exposure_study_for_example.xlxs
-notes:        # list of notes {}
-#  - node_ID:
-#    text: example risk assessment 
-#    author: Manuel Pastor
-#    e-mail: manuel.pastor@upf.edu
-#    date: 3/1/2023
-#    link : note.txt
-## RA ASSESSMENT RESULTS
-assessment:      # list of results {}
-## WORKFLOW
+ra:
+  ID:     
+  workflow_name: workflow.csv
+  step: 0
+  active_nodes: # []
+general:
+  endpoint:                     # toxicity endpoint {}
+    #  name : CMR
+    #  description : None
+  administration_route:         # [oral|topic]
+  species:                      # [none|human|rat]
+  regulatory_framework:         # regulatory framework [none|ECHA|REACH]
+  substances:                   # list of input substances {}
+    #  - name : example
+    #    SMILES : c1ccccc1
+    #    CASRN : 123-456-78
+results:                        # list of results {}         
+notes:                          # list of notes {}
+assessment:                     # list of results {}
