--- a/namastox/default/ra.yaml
+++ b/namastox/default/ra.yaml
@@ -12,11 +12,7 @@ general:
   species:                      # [none|human|rat]
   regulatory_framework:         # regulatory framework [none|ECHA|REACH]
   uncertainty:                     
-  substances: []                # list of input substances {}  TODO: deprecated!
-  substance_name: []            # list of substances names
-  substance_id: []              # list of substances IDs
-  substance_CASRN: []           # list of substances CAS-RN
-  substance_SMILES:             # list of substances SMILES 
+  substances: []                # list of input substances {}
   workflow_custom:
 results: []                     # list of results {}         
 notes: []                       # list of notes {}
